--- a/modules/Admin/view/index/segunda-tela.phtml
+++ b/modules/Admin/view/index/segunda-tela.phtml
@@ -1,3 +1,4 @@
-<div data-target="left">
-    SEGUNDA TELA AEEE!!!! <?php print_r($this->teste) ?>
+<div data-block-target="main" id="segunda-tela">
+    Nome: {{name}}
+    <input type="{{input-type}}" name="{{input-name}}" />
 </div>
