--- a/public/themes/fsk/view/layout.phtml
+++ b/public/themes/fsk/view/layout.phtml
@@ -30,18 +30,19 @@
                         </ul>
                     </div>
                 </div>
-            </nav>                    
+            </nav>
 
         </div>
         <div id="cache" style="display: none;"><div class="html"></div></div>
         <div id="layout" style="height: 400px"></div>
         <script>
             var basePath = "<?php echo $this->basePath ?>";
+            var jsBasePath = "<?php echo $this->jsBasePath ?>";
             var theme = "<?php echo $this->theme ?>";
             var themePath = "<?php echo $this->themePath ?>";
             var env = "<?php echo $this->env ?>";
             var version = "<?php echo $this->version ?>";
         </script>
-        <script data-main="public/js/app" src="<?php echo $this->basePath ?>vendor/requirejs/require.js"></script>
+        <script data-main="<?php echo $this->jsBasePath ?>js/app" src="<?php echo $this->basePath ?>vendor/requirejs/require.js"></script>
     </body>
 </html>
