--- a/modules/Admin/view/index/index.phtml
+++ b/modules/Admin/view/index/index.phtml
@@ -1,1 +1,23 @@
-Opa
+<div data-block-target="top" id="app-top" class="form-horizontal">
+    <nav class="navbar navbar-default" role="navigation">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand link-ajax" href="admin/index/index">
+                    <img alt="Br-Flow" src="...">
+                </a>
+            </div>
+            <div class="collapse navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <li><a class="link-ajax" href="admin/index/segunda-tela">Segunda Tela</a></li>
+                    <li><a class="link-ajax" href="admin/index/terceira-tela">Terceira Tela</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+</div>
+<div data-block-target="left" id="app-left" class="form-horizontal" style="height: 100%; width: 100%;">
+    ssds
+</div>
+<div data-block-target="main" id="app-main" class="form-horizontal">
+    Tela principal<br />
+</div>
