--- a/modules/Admin/view/index/segunda-tela.phtml
+++ b/modules/Admin/view/index/segunda-tela.phtml
@@ -1,4 +1,4 @@
-<div data-block-target="main" id="segunda-tela" class="form-horizontal">
+<div data-block-target="main" id="segunda-tela-main" class="form-horizontal">
     <div class="form-group col-xs-6">
         <div class="control-label col-xs-3">Nome: </div>
         <div class="col-xs-7">
@@ -8,19 +8,19 @@
     <div class="form-group col-xs-6">
         <div class="control-label col-xs-3">País: </div>
         <div class="col-xs-7">
-            <input type="text" country="input-country" class="form-control" value="{{dadosPessoais.country}}" />
+            <input type="text" name="input-country" class="form-control" value="{{dadosPessoais.country}}" />
         </div>
     </div>
     <div class="form-group col-xs-6">
         <div class="control-label col-xs-3">Estado: </div>
         <div class="col-xs-7">
-            <input type="text" state="input-state" class="form-control" value="{{dadosPessoais.state}}" />
+            <input type="text" name="input-state" class="form-control" value="{{dadosPessoais.state}}" />
         </div>
     </div>
     <div class="form-group col-xs-6">
         <div class="control-label col-xs-3">Cidade: </div>
         <div class="col-xs-7">
-            <input type="text" city="input-city" class="form-control" value="{{dadosPessoais.city}}" />
+            <input type="text" name="input-city" class="form-control" value="{{dadosPessoais.city}}" />
         </div>
     </div>
     <hr class="hr" />
