--- a/modules/Admin/view/usuario/cadastro.phtml
+++ b/modules/Admin/view/usuario/cadastro.phtml
@@ -9,12 +9,12 @@
         <div class="form-group">
             <label for="input-senha" class="col-sm-2 control-label">Senha</label>
             <div class="col-sm-4">
-                <input type="text" class="form-control" id="input-senha" name='senha' placeholder="Senha" />
+                <input type="password" class="form-control" id="input-senha" name='senha' placeholder="Senha" />
             </div>
         </div>
         <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
-                <button type="button" name='salvar' class="btn btn-primary">Salvar</button>
+                <input type="button" name='salvar' class="btn btn-primary" value='Salvar' />
             </div>
         </div>
     </div>
