--- a/modules/Admin/view/usuario/relatorio.phtml
+++ b/modules/Admin/view/usuario/relatorio.phtml
@@ -1,3 +1,3 @@
 <div data-block-target="main" id="usuario-relatorio-main" class="">
-    <div class='grid' style="min-height: 400px; width: 100%; position: relative;"></div>
+    <div class='grid' style="min-height: 400px; height: 100%; width: 100%; position: relative;"></div>
 </div>
