Tela de autenticação

--- a/modules/Admin/view/usuario/cadastro.phtml
+++ b/modules/Admin/view/usuario/cadastro.phtml
@@ -13,6 +13,14 @@
             </div>
         </div>
         <div class="form-group">
+            <label for="input-grupo-usuarios" class="col-sm-2 control-label">Grupo de Usuários</label>
+            <div class="col-sm-4">
+                <select class="form-control" id="input-grupo-usuarios" name='grupoUsuarios'>
+
+                </select>
+            </div>
+        </div>
+        <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
                 <input type="button" name='salvar' class="btn btn-primary" value='Salvar' />
             </div>
