Tela de autenticação

--- a/modules/Main/view/index/index.phtml
+++ b/modules/Main/view/index/index.phtml
@@ -10,7 +10,8 @@
                     <li><a class="link-ajax" href="admin/index/index">Administração</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><small><a class="layout-toggle-left" href="#">Mostrar/Esconder Menu</a></small></li>
+                    <li><a class="layout-toggle-left" href="#">Mostrar/Esconder Menu</a></li>
+                    <li><a class="system-logout" href="#">Sair</a></li>
                 </ul>
             </div>
         </div>
