--- a/public/themes/fsk/view/layout.phtml
+++ b/public/themes/fsk/view/layout.phtml
@@ -23,6 +23,7 @@
             var themePath = "<?php echo $this->themePath ?>";
             var env = "<?php echo $this->env ?>";
             var version = "<?php echo $this->version ?>";
+            var logado = "<?php echo $this->logado ?>";
         </script>
         <script data-main="<?php echo $this->jsBasePath ?>js/app.js?v=<?php echo $this->version ?>" src="<?php echo $this->basePath ?>vendor/requirejs/require.js"></script>
     </body>
