--- a/modules/Admin/view/grupo-usuarios/cadastro.phtml
+++ b/modules/Admin/view/grupo-usuarios/cadastro.phtml
@@ -1,21 +1,28 @@
 <div data-block-target="main" id="grupo-usuarios-cadastro-main" class="container-fluid">
-    <div class='form form-horizontal' style="width: 100%;">
-        <div class="form-group">
-            <label for="input-nome" class="col-sm-2 control-label">Nome</label>
-            <div class="col-sm-4">
-                <input type="text" class="form-control" id="input-nome" name='nome' placeholder="Nome" />
+    <form class='form form-horizontal col-xs-6 col-xs-offset-3'>
+        <fieldset>
+            <legend>Cadastro de Grupo de Usuários</legend>
+            <input type="hidden" name='id' />
+            <div class="form-group form-item">
+                <label class="col-sm-2 control-label">Nome</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" name='nome' placeholder="Nome" />
+                </div>
             </div>
-        </div>
-        <div class="form-group">
-            <label for="input-status" class="col-sm-2 control-label">Status</label>
-            <div class="col-sm-4">
-                <input type="text" class="form-control" id="input-status" name='status' placeholder="Status" />
+            <div class="form-group form-item">
+                <label for="input-status" class="col-sm-2 control-label">Status</label>
+                <div class="col-sm-10">
+                    <select class="form-control" name='status'>
+                    </select>
+                </div>
             </div>
-        </div>
-        <div class="form-group">
-            <div class="col-sm-offset-2 col-sm-10">
-                <input type="button" name='salvar' class="btn btn-primary" value='Salvar' />
+            <div class="form-group">
+                <div class="col-sm-offset-2 col-sm-10">
+                    <div class="pull-right">
+                        <input type="button" name='salvar' data-form-submit class="btn btn-primary" value='Salvar' />
+                    </div>
+                </div>
             </div>
-        </div>
-    </div>
+        </fieldset>
+    </form>
 </div>
