--- a/modules/Admin/view/usuario/cadastro.phtml
+++ b/modules/Admin/view/usuario/cadastro.phtml
@@ -13,10 +13,15 @@
             </div>
         </div>
         <div class="form-group">
+            <label for="input-nome" class="col-sm-2 control-label">Nome</label>
+            <div class="col-sm-4">
+                <input type="text" class="form-control" id="input-nome" name='nome' placeholder="Nome" />
+            </div>
+        </div>
+        <div class="form-group">
             <label for="input-grupo-usuarios" class="col-sm-2 control-label">Grupo de Usuários</label>
             <div class="col-sm-4">
                 <select class="form-control" id="input-grupo-usuarios" name='grupoUsuarios'>
-
                 </select>
             </div>
         </div>
